--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <div class="header__logo">
                     <a href="#"><img src="./img/ACTIVEBOX1.png" alt="active-logo"><img src="./img/ACTIVEBOX.png" alt="box-logo"></a>
                 </div>
+                <div class="header__burger">
+                    <span></span>
+                </div>
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__item">
